--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ anyhow = "1.0.72"
 clap = { version = "4.3.12", features = ["derive"] }
 dicom = "0.5.4"
 regex = "1.9.1"
+serde = { version = "1.0.171", features = ["derive"] }
+serde_json = "1.0.103"
 
 # https://github.com/johnthagen/min-sized-rust
 [profile.release]
