--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ dicom = "0.5.4"
 regex = "1.9.1"
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
+fs-err = "2.9.0"
+camino = "1.1.6"
 
 # https://github.com/johnthagen/min-sized-rust
 [profile.release]
@@ -21,5 +23,6 @@ lto = "fat"
 codegen-units = 1
 
 [dev-dependencies]
-fs-err = "2.9.0"
+glob = "0.3.1"
+pathdiff = { version = "0.2.1", features = ["camino"] }
 tempdir = "0.3.7"
