--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,6 +97,7 @@ jobs:
         file: ./Dockerfile
         tags: localhost:5000/${{ steps.determine.outputs.dock_image }}
 #        platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
+        platforms: linux/amd64
         push: true
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
