--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
 fs-err = "2.9.0"
 camino = "1.1.6"
+hashbrown = { version = "0.14.0", features = ["serde"] }
 
 # https://github.com/johnthagen/min-sized-rust
 [profile.release]
