--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1.0.103"
 fs-err = "2.9.0"
 camino = "1.1.6"
 hashbrown = { version = "0.14.0", features = ["serde"] }
+thiserror = "1.0.43"
 
 # https://github.com/johnthagen/min-sized-rust
 [profile.release]
