Ooohhhhhh, that was why it was slow...

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,7 +134,7 @@ jobs:
           localhost:5000/${{ steps.determine.outputs.dock_image }}
           docker.io/${{ steps.determine.outputs.dock_image }}
           ghcr.io/${{ steps.determine.outputs.dock_image }}
-        platforms: linux/amd64,linux/arm64/v8
+        platforms: linux/amd64
         push: true
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
