--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rx-repack"
 description = "Rust re-write of px-repack"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,7 +14,7 @@ regex = "1.9.1"
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
 fs-err = "2.9.0"
-camino = "1.1.6"
+camino = { version = "1.1.6", features = ["serde1"] }
 hashbrown = { version = "0.14.0", features = ["serde"] }
 thiserror = "1.0.43"
 
