--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ fs-err = "2.9.0"
 camino = { version = "1.1.6", features = ["serde1"] }
 hashbrown = { version = "0.14.0", features = ["serde"] }
 thiserror = "1.0.43"
+itertools = "0.11.0"
 
 # https://github.com/johnthagen/min-sized-rust
 [profile.release]
