--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rx-repack"
 description = "Rust re-write of px-repack"
-version = "0.4.2"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -18,6 +18,7 @@ camino = { version = "1.1.6", features = ["serde1"] }
 hashbrown = { version = "0.14.0", features = ["serde"] }
 thiserror = "1.0.43"
 itertools = "0.11.0"
+seahash = "4.1.0"
 
 # https://github.com/johnthagen/min-sized-rust
 [profile.release]
